# AutoNet

./: .gitignore  README.md
Net/: Net.sln
Net/Debug/: Net.ilk
Net/Net/: Assert.h  BaseServer.cpp  BaseServer.h  CMakeLists.txt  Connector.cpp  Connector.h  MsgBase.h  Net.h  Net.vcxproj  Net.vcxproj.filters  NetDef.h  NetSocket.cpp  NetSocket.h  RingBuffer.h  SocketAPI.cpp  SocketAPI.h  TypeDef.h  test.cpp
Net/Net/Debug/: netsocket.obj.enc  vc140.idb
Net/Net/Debug/Net.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Net.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
